Update project structure, routing, and UI components

--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/ConfirmEmail.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/ConfirmEmail.razor
@@ -1,11 +1,4 @@
-﻿@page "/Account/ConfirmEmail"
-
-@using System.Text
-@using GoldEx.Sdk.Server.Domain.Entities.Identity
-@using GoldEx.Server.Services
-@using Microsoft.AspNetCore.Identity
-@using Microsoft.AspNetCore.WebUtilities
-@using GoldEx.Server.Components.Account.Shared
+﻿@attribute [Route(ClientRoutes.Accounts.ConfirmEmail)]
 
 @inject UserManager<AppUser> UserManager
 @inject IdentityRedirectManager RedirectManager
