--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/ForgotPasswordConfirmation.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/ForgotPasswordConfirmation.razor
@@ -1,4 +1,4 @@
-﻿@page "/Account/ForgotPasswordConfirmation"
+﻿@attribute [Route(ClientRoutes.Accounts.ForgotPasswordConfirmation)]
 
 <PageTitle>تایید فراموشی رمز عبور</PageTitle>
 
