--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/InvalidPasswordReset.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/InvalidPasswordReset.razor
@@ -1,4 +1,4 @@
-﻿@page "/Account/InvalidPasswordReset"
+﻿@attribute [Route(ClientRoutes.Accounts.InvalidPasswordReset)]
 
 <PageTitle>بازنشانی نامعتبر رمز عبور</PageTitle>
 
