--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/InvalidUser.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/InvalidUser.razor
@@ -1,5 +1,4 @@
-﻿@page "/Account/InvalidUser"
-@using GoldEx.Server.Components.Account.Shared
+﻿@attribute [Route(ClientRoutes.Accounts.InvalidUser)]
 
 <PageTitle>کاربر نامعتبر</PageTitle>
 
