--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/ResetPassword.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/ResetPassword.razor
@@ -1,12 +1,4 @@
-﻿@page "/Account/ResetPassword"
-
-@using System.ComponentModel.DataAnnotations
-@using System.Text
-@using GoldEx.Sdk.Server.Domain.Entities.Identity
-@using Microsoft.AspNetCore.Identity
-@using Microsoft.AspNetCore.WebUtilities
-@using GoldEx.Server.Services
-@using GoldEx.Server.Components.Account.Shared
+﻿@attribute [Route(ClientRoutes.Accounts.ResetPassword)]
 
 @inject IdentityRedirectManager RedirectManager
 @inject UserManager<AppUser> UserManager
