--- a/src/App/Server/GoldEx.Server/Components/_Imports.razor
+++ b/src/App/Server/GoldEx.Server/Components/_Imports.razor
@@ -10,4 +10,6 @@
 @using GoldEx
 @using GoldEx.Client
 @using GoldEx.Client.Components.Layouts
+@using GoldEx.Client.Components
+@using Microsoft.AspNetCore.Components.Sections
 @using MudBlazor
