--- a/src/App/Client/GoldEx.Client/Pages/Home.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Home.razor
@@ -1,14 +1,29 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>صفحه اصلی</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<MudButton Color="Color.Primary" Variant="Variant.Filled">Click me</MudButton>
-<MudButton Color="Color.Secondary" Variant="Variant.Filled">Click me</MudButton>
-<MudButton Color="Color.Success" Variant="Variant.Filled">Click me</MudButton>
-<MudButton Color="Color.Default" Variant="Variant.Filled">Click me</MudButton>
-<MudButton Color="Color.Info" Variant="Variant.Filled">Click me</MudButton>
-<MudButton Color="Color.Dark" Variant="Variant.Filled">Click me</MudButton>
+<MudContainer MaxWidth="MaxWidth.Large">
+    <div class="row">
+        <div class="col-12 col-md-6">
+            <h3 class="m-0" style="font-weight: 600;">
+                میز خدمات الکترونیکی گلدکس
+            </h3>
+            <div class="my-4">
+                <AuthorizeView>
+                    <Authorized>
+                        <strong>@context.User.GetDisplayName()، </strong> به سامانه گلدکس خوش آمدید
+                    </Authorized>
+                </AuthorizeView>
+            </div>
+        </div>
+        <AuthorizeView>
+            <NotAuthorized>
+                <div class="col-12 col-md-6 d-flex align-items-center justify-content-center justify-content-md-end p-5">
+                    <MudButton Href="/account/login" Variant="Variant.Filled" Color="Color.Primary">
+                        ورود به حساب کاربری
+                    </MudButton>
+                </div>
+            </NotAuthorized>
+        </AuthorizeView>
+    </div>
+</MudContainer>
