--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/ConfirmEmailChange.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/ConfirmEmailChange.razor
@@ -1,11 +1,4 @@
-﻿@page "/Account/ConfirmEmailChange"
-
-@using System.Text
-@using GoldEx.Sdk.Server.Domain.Entities.Identity
-@using Microsoft.AspNetCore.Identity
-@using Microsoft.AspNetCore.WebUtilities
-@using GoldEx.Server.Services
-@using GoldEx.Server.Components.Account.Shared
+﻿@attribute [Route(ClientRoutes.Accounts.ConfirmEmailChange)]
 
 @inject UserManager<AppUser> UserManager
 @inject SignInManager<AppUser> SignInManager
