--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/ForgotPassword.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/ForgotPassword.razor
@@ -1,12 +1,4 @@
-﻿@page "/Account/ForgotPassword"
-
-@using System.ComponentModel.DataAnnotations
-@using System.Text
-@using System.Text.Encodings.Web
-@using GoldEx.Sdk.Server.Domain.Entities.Identity
-@using GoldEx.Server.Services
-@using Microsoft.AspNetCore.Identity
-@using Microsoft.AspNetCore.WebUtilities
+﻿@attribute [Route(ClientRoutes.Accounts.ForgotPassword)]
 
 @inject UserManager<AppUser> UserManager
 @inject IEmailSender<AppUser> EmailSender
