--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/Login.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/Login.razor
@@ -1,22 +1,11 @@
-﻿@page "/Account/Login"
-
-@using System.ComponentModel.DataAnnotations
-@using GoldEx.Sdk.Server.Domain.Entities.Identity
-@using GoldEx.Server.Common.Enums
-@using GoldEx.Server.Services
-@using Microsoft.AspNetCore.Authentication
-@using Microsoft.AspNetCore.Identity
-@using GoldEx.Server.Components.Account.Shared
+﻿@attribute [Route(ClientRoutes.Accounts.Login)]
 
 @inject SignInManager<AppUser> SignInManager
 @inject ILogger<Login> Logger
-@inject NavigationManager NavigationManager
 @inject IdentityRedirectManager RedirectManager
 @layout BaseLayout
 
 <PageTitle>ورود</PageTitle>
-
-<script src="https://accounts.google.com/gsi/client" async></script>
 
 <MudContainer MaxWidth="MaxWidth.Small" Class="mx-auto mt-5">
     <MudPaper Elevation="4" Class="p-4">
