--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/LoginWithRecoveryCode.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/LoginWithRecoveryCode.razor
@@ -1,10 +1,4 @@
-﻿@page "/Account/LoginWithRecoveryCode"
-
-@using System.ComponentModel.DataAnnotations
-@using GoldEx.Sdk.Server.Domain.Entities.Identity
-@using Microsoft.AspNetCore.Identity
-@using GoldEx.Server.Services
-@using GoldEx.Server.Components.Account.Shared
+﻿@attribute [Route(ClientRoutes.Accounts.LoginWithRecoveryCode)]
 
 @inject SignInManager<AppUser> SignInManager
 @inject UserManager<AppUser> UserManager
