--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/ChangePassword.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/ChangePassword.razor
@@ -1,9 +1,4 @@
-﻿@page "/Account/Manage/ChangePassword"
-
-@using System.ComponentModel.DataAnnotations
-@using GoldEx.Sdk.Server.Domain.Entities.Identity
-@using GoldEx.Server.Services
-@using Microsoft.AspNetCore.Identity
+﻿@attribute [Route(ClientRoutes.Accounts.Manage.ChangePassword)]
 
 @inject UserManager<AppUser> UserManager
 @inject SignInManager<AppUser> SignInManager
