--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/EnableAuthenticator.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/EnableAuthenticator.razor
@@ -1,12 +1,4 @@
-﻿@page "/Account/Manage/EnableAuthenticator"
-
-@using System.ComponentModel.DataAnnotations
-@using System.Globalization
-@using System.Text
-@using System.Text.Encodings.Web
-@using GoldEx.Sdk.Server.Domain.Entities.Identity
-@using Microsoft.AspNetCore.Identity
-@using GoldEx.Server.Services
+﻿@attribute [Route(ClientRoutes.Accounts.Manage.EnableAuthenticator)]
 
 @inject UserManager<AppUser> UserManager
 @inject IdentityUserAccessor UserAccessor
