--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/Index.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/Index.razor
@@ -1,10 +1,4 @@
-﻿@page "/Account/Manage"
-
-@using System.ComponentModel.DataAnnotations
-@using GoldEx.Sdk.Server.Domain.Entities.Identity
-@using GoldEx.Server.Application.Extensions
-@using GoldEx.Server.Services
-@using Microsoft.AspNetCore.Identity
+﻿@attribute [Route(ClientRoutes.Accounts.Manage.Index)]
 
 @inject UserManager<AppUser> UserManager
 @inject SignInManager<AppUser> SignInManager
