--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/Register.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/Register.razor
@@ -1,14 +1,4 @@
-﻿@page "/Account/Register"
-
-@using System.ComponentModel.DataAnnotations
-@using System.Text
-@using System.Text.Encodings.Web
-@using GoldEx.Sdk.Server.Domain.Entities.Identity
-@using GoldEx.Server.Common.Enums
-@using Microsoft.AspNetCore.Identity
-@using Microsoft.AspNetCore.WebUtilities
-@using GoldEx.Server.Services
-@using GoldEx.Server.Components.Account.Shared
+﻿@attribute [Route(ClientRoutes.Accounts.Register)]
 
 @inject UserManager<AppUser> UserManager
 @inject IUserStore<AppUser> UserStore
