--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/ResendEmailConfirmation.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/ResendEmailConfirmation.razor
@@ -1,12 +1,4 @@
-﻿@page "/Account/ResendEmailConfirmation"
-
-@using System.ComponentModel.DataAnnotations
-@using System.Text
-@using System.Text.Encodings.Web
-@using GoldEx.Sdk.Server.Domain.Entities.Identity
-@using Microsoft.AspNetCore.Identity
-@using Microsoft.AspNetCore.WebUtilities
-@using GoldEx.Server.Components.Account.Shared
+﻿@attribute [Route(ClientRoutes.Accounts.ResendEmailConfirmation)]
 
 @inject UserManager<AppUser> UserManager
 @inject IEmailSender<AppUser> EmailSender
