--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/ResetPasswordConfirmation.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/ResetPasswordConfirmation.razor
@@ -1,4 +1,5 @@
-﻿@page "/Account/ResetPasswordConfirmation"
+﻿@attribute [Route(ClientRoutes.Accounts.ResetPasswordConfirmation)]
+
 <PageTitle>تایید بازنشانی رمز عبور</PageTitle>
 
 <h1>تایید بازنشانی رمز عبور</h1>
