Update UI components and add Persian error messages

--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/ChangePassword.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/ChangePassword.razor
@@ -9,30 +9,34 @@
 <PageTitle>تغییر رمز عبور</PageTitle>
 
 <MudText Typo="Typo.h6" GutterBottom="true">تغییر رمز عبور</MudText>
+<hr />
 
 <StatusMessage Message="@_message" />
+
+<MudText Typo="Typo.body1" GutterBottom="true">تغییر رمز عبور حساب داخلی</MudText>
 
 <EditForm Model="Input" FormName="change-password" OnValidSubmit="OnValidSubmitAsync" method="post">
     <DataAnnotationsValidator />
 
     <MudGrid>
-        <MudItem md="12">
-            <MudStaticTextField For="@(() => Input.OldPassword)" @bind-Value="Input.OldPassword" InputType="InputType.Password"
-                                Label="رمز عبور فعلی" Placeholder="رمز عبور فعلی" HelperText="لطفا رمز عبور فعلی خود را وارد کنید"
+        <MudItem lg="4" md="12">
+            <MudStaticTextField For="@(() => Input.OldPassword)" @bind-Value="Input.OldPassword" InputType="InputType.Password" Variant="Variant.Outlined"
+                                Label="رمز عبور فعلی"
                                 UserAttributes="@(new Dictionary<string, object?> { { "autocomplete", "current-password" }, { "aria-required", "true" } } )" />
         </MudItem>
-        <MudItem md="12">
-            <MudStaticTextField For="@(() => Input.NewPassword)" @bind-Value="Input.NewPassword" InputType="InputType.Password"
-                                Label="رمز عبور جدید" Placeholder="رمز عبور جدید" HelperText="لطفا رمز عبور جدید خود را وارد کنید"
+        <MudItem lg="4" md="12">
+            <MudStaticTextField For="@(() => Input.NewPassword)" @bind-Value="Input.NewPassword" InputType="InputType.Password" Variant="Variant.Outlined"
+                                Label="رمز عبور جدید"
                                 UserAttributes="@(new Dictionary<string, object?> { { "autocomplete", "new-password" }, { "aria-required", "true" } } )" />
         </MudItem>
-        <MudItem md="12">
-            <MudStaticTextField For="@(() => Input.ConfirmPassword)" @bind-Value="Input.ConfirmPassword" InputType="InputType.Password"
-                                Label="تکرار رمز عبور" Placeholder="تکرار رمز عبور" HelperText="لطفا رمز عبور جدید خود را تکرار کنید"
+        <MudItem lg="4" md="12">
+            <MudStaticTextField For="@(() => Input.ConfirmPassword)" @bind-Value="Input.ConfirmPassword" InputType="InputType.Password" Variant="Variant.Outlined"
+                                Label="تکرار رمز عبور جدید"
                                 UserAttributes="@(new Dictionary<string, object?> { { "autocomplete", "new-password" }, { "aria-required", "true" } } )" />
         </MudItem>
-        <MudItem md="12">
-            <MudStaticButton Variant="Variant.Filled" Color="Color.Primary" FullWidth="true" FormAction="FormAction.Submit">ذخیره تغییرات</MudStaticButton>
+        <MudItem xs="12" Class="d-flex justify-content-lg-end">
+            <MudStaticButton Variant="Variant.Filled" Color="Color.Primary" Size="Size.Large"
+                             FormAction="FormAction.Submit" StartIcon="@Icons.Material.Filled.Save">ذخیره</MudStaticButton>
         </MudItem>
     </MudGrid>
 </EditForm>
@@ -75,12 +79,12 @@
 
     private sealed class InputModel
     {
-        [Required]
+        [Required(ErrorMessage = "لطفا {0} را وارد کنید")]
         [DataType(DataType.Password)]
         [Display(Name = "رمز فعلی")]
         public string OldPassword { get; set; } = "";
 
-        [Required]
+        [Required(ErrorMessage = "لطفا {0} را وارد کنید")]
         [StringLength(100, ErrorMessage = "اندازه {0} حداقل باید {2} و حداکثر {1} حرف باشد", MinimumLength = 6)]
         [DataType(DataType.Password)]
         [Display(Name = "رمز جدید")]
