--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/ExternalLogins.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/ExternalLogins.razor
@@ -8,51 +8,59 @@
 
 <PageTitle>مدیریت اتصال به سرویس‌های احراز هویت خارجی</PageTitle>
 
+<MudText Typo="Typo.h6" GutterBottom="true">سرویس های احراز هویت</MudText>
+<hr />
+
 <StatusMessage />
 @if (_currentLogins?.Count > 0)
 {
-    <h3>سرویس های ثبت شده</h3>
-    <table class="table">
-        <tbody>
-            @foreach (var login in _currentLogins)
-            {
-                <tr>
-                    <td>@login.ProviderDisplayName</td>
-                    <td>
-                        @if (_showRemoveButton)
-                        {
-                            <form @formname="@($"remove-login-{login.LoginProvider}")" @onsubmit="OnSubmitAsync" method="post">
-                                <AntiforgeryToken />
-                                <div>
-                                    <input type="hidden" name="@nameof(LoginProvider)" value="@login.LoginProvider" />
-                                    <input type="hidden" name="@nameof(ProviderKey)" value="@login.ProviderKey" />
-                                    <button type="submit" class="btn btn-primary" title="حذف @login.ProviderDisplayName از سیستم احراز هویت">حذف</button>
-                                </div>
-                            </form>
-                        }
-                        else
-                        {
-                            @: &nbsp;
-                        }
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
+    <MudText Typo="Typo.body1" GutterBottom="true">سرویس های لینک شده به حساب شما</MudText>
+
+    <div class="d-flex justify-content-between align-items-center">
+        @foreach (var login in _currentLogins)
+        {
+            <MudItem Class="ml-2">
+                <MudText Typo="Typo.body1"><MudIcon Icon="@Icons.Material.Filled.ArrowBackIosNew"></MudIcon> &nbsp; @login.ProviderDisplayName</MudText>
+            </MudItem>
+            <MudItem>
+                @if (_showRemoveButton)
+                {
+                    <form @formname="@($"remove-login-{login.LoginProvider}")" @onsubmit="OnSubmitAsync" method="post">
+                        <AntiforgeryToken />
+                        <div>
+                            <input type="hidden" name="@nameof(LoginProvider)" value="@login.LoginProvider" />
+                            <input type="hidden" name="@nameof(ProviderKey)" value="@login.ProviderKey" />
+                            <MudStaticButton Size="Size.Medium"
+                                             Variant="Variant.Filled" Color="Color.Error" FormAction="FormAction.Submit">
+                                <MudIcon Icon="@Icons.Material.Filled.DeleteForever" Title="حذف"></MudIcon>
+                            </MudStaticButton>
+                        </div>
+                    </form>
+                }
+                else
+                {
+                    @: &nbsp;
+                }
+            </MudItem>
+        }
+    </div>
 }
 @if (_otherLogins?.Count > 0)
 {
-    <h4>افزودن سرویس احراز هویت</h4>
-    <hr />
+    <MudText Typo="Typo.body1" GutterBottom="true">افزودن لینک حساب خارجی</MudText>
+    <!-- TODO: add ApiUrl here -->
     <form class="form-horizontal" action="Account/Manage/LinkExternalLogin" method="post">
         <AntiforgeryToken />
         <div>
             <p>
                 @foreach (var provider in _otherLogins)
                 {
-                    <button type="submit" class="btn btn-primary" name="Provider" value="@provider.Name" title="ورود با استفاده از حساب @provider.DisplayName">
-                        @provider.DisplayName
-                    </button>
+                    <input type="hidden" name="Provider" value="@provider.Name"/>
+
+                    <MudItem xs="12">
+                        <MudStaticButton Variant="Variant.Filled" Color="Color.Primary" Size="Size.Large"
+                                         FormAction="FormAction.Submit" StartIcon="@Icons.Custom.Brands.Google">@provider.DisplayName</MudStaticButton>
+                    </MudItem>
                 }
             </p>
         </div>
