--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/SetPassword.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/SetPassword.razor
@@ -8,29 +8,33 @@
 <PageTitle>تنظیم رمز عبور</PageTitle>
 
 <MudText Typo="Typo.h6" GutterBottom="true">تنظیم رمز عبور</MudText>
+<hr />
+<MudText Typo="Typo.h6" GutterBottom="true">تعریف رمز عبور برای حساب داخلی</MudText>
 
 <StatusMessage Message="@_message" />
 
-<p class="text-info">
-    شما برای این سایت نام کاربری/رمز عبور محلی ندارید.
-    یک حساب کاربری محلی اضافه کنید تا بتوانید بدون ورود با سرویس وارد شوید.
-</p>
+<MudAlert Severity="Severity.Info" ContentAlignment="HorizontalAlignment.Start" Variant="Variant.Outlined" Dense="true" Class="mb-2">
+    شما برای ورود به گلدکس نام کاربری/رمز عبور داخلی ندارید.
+    با تنظیم رمز عبور جدید، می توانید بدون نیاز به احراز هویت خارجی وارد سامانه شوید.
+</MudAlert>
+
 <EditForm Model="Input" FormName="change-password" OnValidSubmit="OnValidSubmitAsync" method="post">
     <DataAnnotationsValidator />
 
     <MudGrid>
-        <MudItem md="12">
+        <MudItem lg="6" md="12">
             <MudStaticTextField For="@(() => Input.NewPassword)" @bind-Value="Input.NewPassword" InputType="InputType.Password"
-                                Label="رمز عبور جدید" Placeholder="رمز عبور جدید" HelperText="لطفا رمز عبور جدید خود را وارد کنید"
+                                Label="رمز عبور جدید" Variant="Variant.Outlined"
                                 UserAttributes="@(new Dictionary<string, object?> { { "autocomplete", "new-password" }, { "aria-required", "true" } } )" />
         </MudItem>
-        <MudItem md="12">
+        <MudItem lg="6" md="12">
             <MudStaticTextField For="@(() => Input.ConfirmPassword)" @bind-Value="Input.ConfirmPassword" InputType="InputType.Password"
-                                Label="تکرار رمز عبور" Placeholder="تکرار رمز عبور" HelperText="لطفا رمز عبور جدید خود را تکرار کنید"
+                                Label="تکرار رمز عبور جدید" Variant="Variant.Outlined"
                                 UserAttributes="@(new Dictionary<string, object?> { { "autocomplete", "new-password" }, { "aria-required", "true" } } )" />
         </MudItem>
-        <MudItem md="12">
-            <MudStaticButton Variant="Variant.Filled" Color="Color.Primary" FullWidth="true" FormAction="FormAction.Submit">تنظیم رمز عبور</MudStaticButton>
+        <MudItem xs="12" Class="d-flex justify-content-lg-end">
+            <MudStaticButton Variant="Variant.Filled" Color="Color.Primary" Size="Size.Large"
+                             FormAction="FormAction.Submit" StartIcon="@Icons.Material.Filled.Save">ذخیره</MudStaticButton>
         </MudItem>
     </MudGrid>
 </EditForm>
@@ -71,7 +75,7 @@
 
     private sealed class InputModel
     {
-        [Required]
+        [Required(ErrorMessage = "لطفا {0} را وارد کنید")]
         [StringLength(100, ErrorMessage = "طول {0} حداقل باید {2} و حداکثر {1} حرف باشد", MinimumLength = 6)]
         [DataType(DataType.Password)]
         [Display(Name = "رمز عبور جدید")]
