--- a/src/App/Server/GoldEx.Server/Components/Account/Shared/ManageLayout.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Shared/ManageLayout.razor
@@ -1,27 +1,31 @@
 ﻿@inherits LayoutComponentBase
 @layout MainLayout
 
-<MudBreadcrumbs Items="_breadcrumbs">
-    <SeparatorTemplate>
-        <MudIcon Icon="@Icons.Material.Filled.ArrowForwardIos" Size="Size.Small" />
-    </SeparatorTemplate>
-</MudBreadcrumbs>
+<MudContainer MaxWidth="MaxWidth.Large">
+    <MudBreadcrumbs Class="pr-0" Items="_breadcrumbs">
+        <SeparatorTemplate>
+            <MudIcon Icon="@Icons.Material.Filled.ArrowForwardIos" Size="Size.Small" />
+        </SeparatorTemplate>
+    </MudBreadcrumbs>
 
-<MudGrid>
-    <MudItem md="3">
-        <MudText Typo="Typo.h6" GutterBottom="true">تنظیمات حساب کاربری</MudText>
-        <ManageNavMenu />
-    </MudItem>
-    <MudItem md="9">
-        @Body
-    </MudItem>
-</MudGrid>
+    <MudGrid>
+        <MudItem md="3">
+            <MudText Typo="Typo.h6" GutterBottom="true">تنظیمات حساب کاربری</MudText>
+            <hr />
+            <ManageNavMenu />
+        </MudItem>
+        <MudItem md="9">
+            @Body
+        </MudItem>
+    </MudGrid>
+
+</MudContainer>
 
 @code
 {
     private readonly List<BreadcrumbItem> _breadcrumbs =
     [
         new BreadcrumbItem("صفحه اصلی", href: "/", icon: Icons.Material.Filled.Home),
-        new BreadcrumbItem("مدیریت حساب", href: "/Account/Manage", icon: Icons.Material.Filled.ManageAccounts)
+    new BreadcrumbItem("مدیریت حساب", href: "/Account/Manage", icon: Icons.Material.Filled.ManageAccounts)
     ];
 }
